# ppl.common

./: .clang-format  .gitignore  CMakeLists.txt  README.md  cross-arm.sh  ocl-android-aarch64.sh  ocl-x86.sh
cmake/: arm.cmake  benchmark.cmake  cuda.cmake  deps.cmake  install.cmake  ocl.cmake  pplcommon-config.cmake.in  unittest.cmake  x86.cmake
lua/: CMakeLists.txt  lua_log.cc  lua_pplcommon.cc  lua_retcode.cc  lua_types.cc
python/: CMakeLists.txt  py_log.cc  py_pplcommon.cc  py_retcode.cc  py_types.cc
src/ppl/common/: allocator.h  barrier.h  common.h  compact_addr_manager.cc  compact_addr_manager.h  compact_addr_manager_unittest.cc  compact_memory_manager.cc  compact_memory_manager.h  compact_memory_manager_unittest.cc  event_count.cc  event_count.h  file_mapping.cc  file_mapping.h  file_mapping_unittest.cc  futex_wrapper.cc  futex_wrapper.h  generic_cpu_allocator.h  generic_cpu_allocator_unittest.cc  half.cc  half.h  half_benchmark.cc  half_soft.cc  half_unittest.cc  lock_utils.h  log.cc  log.h  log_unittest.cc  message_queue.h  message_queue_unittest.cc  mmap.cc  mmap.h  mmap_unittest.cc  mpsc_queue.cc  mpsc_queue.h  object_pool.h  object_pool_unittest.cc  page_manager.cc  page_manager.h  page_manager_unittest.cc  retcode.h  (+15 more)
src/ppl/common/arm/: fp16fp32_cvt.S  sysinfo.cc  sysinfo.h
src/ppl/common/cuda/: conv_param.h  cuda_buffered_allocator.cc  cuda_buffered_allocator.h  cuda_env.cc  cuda_env.h  cuda_plain_allocator.cc  cuda_plain_allocator.h  cuda_plain_async_allocator.h  cuda_types.h  nccl_utils.cc  nccl_utils.h
src/ppl/common/hip/: hip_types.h
src/ppl/common/ocl/: aes.cc  binary.cc  binary.h  crypto.h  device.cc  device.h  framechain.cc  framechain.h  kernel.cc  kernel.h  kernelbinaries_interface.cc  kernelbinaries_interface.h  kernelbinariesmanager.cc  kernelbinariesmanager.h  kernelpool.cc  kernelpool.h  memory.cc  memory.h  memory_option.h  oclcommon.h  openclruntime.cc  openclruntime.h  pplopencl.h  runkernel.cc  runkernel.h  types_interface.h
src/ppl/common/windows/: pthread.c  pthread.cc  pthread.h
src/ppl/common/x86/: cpuid_x86_32.S  cpuid_x86_64.S  sysinfo.cc  sysinfo.h
tools/ocl/: aarch64_ocl.sh  oclgpuinfo.cc  oclgpuinfo.h
tools/x86/: cpuinfo.cc
